compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__prefer_function_which_returns_expected_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub fn main() -> Int {\n  a\n}\n\nfn add(a, b) { a + b }\nfn sub(a, b) { a - b }\nfn addf(a, b) { a +. b }\n"
---
pub fn main() -> Int {
  a|
}

fn add(a, b) { a + b }
fn sub(a, b) { a - b }
fn addf(a, b) { a +. b }


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   4_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   4_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   4_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   4_True
add
  kind:   Function
  detail: fn(Int, Int) -> Int
  sort:   02_add
  desc:   app
  edits:
    [2:2-2:2]: "add"
addf
  kind:   Function
  detail: fn(Float, Float) -> Float
  sort:   2_addf
  desc:   app
  edits:
    [2:2-2:2]: "addf"
main
  kind:   Function
  detail: fn() -> Int
  sort:   02_main
  desc:   app
  edits:
    [2:2-2:2]: "main"
sub
  kind:   Function
  detail: fn(Int, Int) -> Int
  sort:   02_sub
  desc:   app
  edits:
    [2:2-2:2]: "sub"
