compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__private_function_in_dep.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "completion_at_default_position(TestProject::for_source(code).add_module(\"dep\",\n        dep))"
---
[]
