compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__private_type_in_dep.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 454
expression: import dep
---
|import dep


----- Completion content -----
